--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@react-three/csg": "^3.2.0",
 		"@react-three/drei": "^9.111.2",
 		"@react-three/fiber": "^8.17.5",
+		"@react-three/postprocessing": "^2.16.2",
 		"@react-three/xr": "^6.2.1",
 		"quixel-to-three": "^1.0.4",
 		"react": "^18.3.1",
